--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
         <img src="img/Logo.png" alt="Logo">
         <span id="titolo">Toboolist</span>
     </header>
-    <main>main</main>
+    <main>
+        <section class="container">
+           <button class="task">Add Task</button>
+           <button class="section" >Add Section</button> 
+        </section>
+        <div class="linea"></div>
+        <section class="container">
+            liste
+        </section>
+
+
+
+    </main>
     
 </body>
 </html>
