verso il completamento

--- a/index.html
+++ b/index.html
@@ -8,21 +8,77 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="img/Logo.png" alt="Logo">
-        <span id="titolo">Toboolist</span>
+        <div id="title">Toboolist</div>
     </header>
     <main>
         <section class="container">
-           <button class="task">Add Task</button>
-           <button class="section" >Add Section</button> 
+           <button class="menu task">Add Task</button>
+           <button class="menu section" >Add Section</button> 
         </section>
-        <div class="linea"></div>
+        <div class="line"></div>
         <section class="container">
-            liste
+            <div class="list">
+                <div class="triangle"></div>
+                <div class="list-name">New Task</div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+            </div>
+            <div class="list">
+                <div class="triangle"></div>
+                <div class="list-name">Today</div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+                <div class="element">
+                    <div class="circle uncheck">&#x2718</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+            </div>
+            <div class="list">
+                <div class="triangle"></div>
+                <div class="list-name">New Task</div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+                <div class="element">
+                    <div class="circle check">&#x2714</div>
+                    Quarterly Newsletter
+                    <span class="tag editorial"> Editorial</span>
+                </div>
+            </div>
         </section>
 
 
