finito ? - lo scopriremo nella prossima puntata

--- a/index.html
+++ b/index.html
@@ -36,46 +36,46 @@
                 <div class="list-name">Today</div>
                 <div class="element">
                     <div class="circle check">&#x2714</div>
-                    Quarterly Newsletter
+                    Recruiting blog post
                     <span class="tag editorial"> Editorial</span>
                 </div>
                 <div class="element">
                     <div class="circle check">&#x2714</div>
-                    Quarterly Newsletter
-                    <span class="tag editorial"> Editorial</span>
+                    Mobile App launch
+                    <span class="tag goals"> Q1 Goals</span>
                 </div>
                 <div class="element">
                     <div class="circle uncheck">&#x2718</div>
-                    Quarterly Newsletter
-                    <span class="tag editorial"> Editorial</span>
+                    Interview John H.
+                    <span class="tag recruiting"> Recruiting</span>
                 </div>
                 <div class="element">
                     <div class="circle check">&#x2714</div>
-                    Quarterly Newsletter
-                    <span class="tag editorial"> Editorial</span>
+                    Summit update to mobile storefronts
+                    <span class="tag mobile"> Mobile</span>
                 </div>
             </div>
             <div class="list">
                 <div class="triangle"></div>
-                <div class="list-name">New Task</div>
+                <div class="list-name">Upcoming</div>
                 <div class="element">
-                    <div class="circle check">&#x2714</div>
-                    Quarterly Newsletter
-                    <span class="tag editorial"> Editorial</span>
+                    <div class="circle uncheck">&#x2718</div>
+                    Schedule meeting with Alex
+
                 </div>
                 <div class="element">
                     <div class="circle check">&#x2714</div>
-                    Quarterly Newsletter
-                    <span class="tag editorial"> Editorial</span>
+                    Homepage refresh
+                    <span class="tag website"> Website</span>
                 </div>
                 <div class="element">
                     <div class="circle check">&#x2714</div>
-                    Quarterly Newsletter
-                    <span class="tag editorial"> Editorial</span>
+                    Onboard new Sales team members
+                    <span class="tag sales"> Sales</span>
                 </div>
                 <div class="element">
                     <div class="circle check">&#x2714</div>
-                    Quarterly Newsletter
+                    Review editorial calendar
                     <span class="tag editorial"> Editorial</span>
                 </div>
             </div>
