--- a/index.html
+++ b/index.html
@@ -6,25 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- aggiunto font roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- header contiene logo e nome del sito -->
     <header>
         <img src="img/Logo.png" alt="Logo">
-        <div id="title">Toboolist</div>
+        <div id="sitename">Toboolist</div>
     </header>
     <main>
+        <!-- menu' iniziale -->
         <section class="container">
            <button class="menu task">Add Task</button>
            <button class="menu section" >Add Section</button> 
         </section>
         <div class="line"></div>
+        <!-- il container contiene i vari elementi  -->
         <section class="container">
+            <!-- ogni list ragruppa le voci per tipo -->
             <div class="list">
                 <div class="triangle"></div>
                 <div class="list-name">New Task</div>
+                <!-- ogni element è una voce della lista -->
                 <div class="element">
                     <div class="circle check">&#x2714</div>
                     Quarterly Newsletter
@@ -80,10 +86,6 @@
                 </div>
             </div>
         </section>
-
-
-
-    </main>
-    
+    </main>    
 </body>
 </html>
